# Cloud_file_storage

./: Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
cloud_storage/cloud/: apps.py  urls.py  views.py
cloud_storage/cloud/s3_service/: s3_service.py  s3_service_factory.py  validators.py
cloud_storage/cloud/templates/cloud/: base.html
cloud_storage/cloud/templates/cloud/includes/: dropzone.html  header.html
cloud_storage/cloud/templates/cloud/layouts/: index.html
cloud_storage/cloud/tests/: test_service.py
cloud_storage/cloud/tests/test_s3_service/: base_test_class.py  test_s3_service_files.py  test_s3_service_folders.py
cloud_storage/cloud/views/: main_view.py  object_handling_view.py
cloud_storage/config/: settings.py  urls.py
cloud_storage/config/settings/: base.py  dev.py  prod.py
cloud_storage/static/cloud/css/: style.css
cloud_storage/static/cloud/js/: dropzone.js  object_actions.js  register_handlers.js
cloud_storage/users/: forms.py  views.py
docker_conf/redis/: redis.conf
