[tool.poetry]
name = "cloud-storage"
version = "0.1.0"
description = ""
authors = ["Vladislav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^5.1.4"
psycopg2 = "^2.9.10"
redis = "^5.2.1"
python-decouple = "^3.8"
django-bootstrap5 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
